sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:6: error: value l is not a member of Int
    for (n <- 1 l-i){
                ^